<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context="edu.sirius.examples.android.notifications.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/send_notification_1"
        android:layout_centerHorizontal="true"
        android:text="@string/send_notification_1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/send_notification_2"
        android:layout_below="@id/send_notification_1"
        android:layout_centerHorizontal="true"
        android:text="@string/send_notification_2"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/send_notification_3"
        android:layout_below="@id/send_notification_2"
        android:layout_centerHorizontal="true"
        android:text="@string/send_notification_3"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/send_notification_4"
        android:layout_below="@id/send_notification_3"
        android:layout_centerHorizontal="true"
        android:text="@string/send_notification_4"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/send_notification_5"
        android:layout_below="@id/send_notification_4"
        android:layout_centerHorizontal="true"
        android:text="@string/send_notification_5"/>

</RelativeLayout>
